[tool.poetry]
name = "senderreceiver"
version = "0.5.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
senderreceiver = "senderreceiver.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.3.5"
black = "^23.3.0"
mypy = "^1.3.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
